# cchess

./: .cchess.c.swp  .gitignore  .valid.c.swp  CMakeLists.txt  Makefile  README.md  board.c  board.h  cchess  cchess.c  cchess.h  piece.c  piece.h  todo.txt  valid.c
src/: ai.c  ai.h  board.c  board.h  cchess.c  cchess.h  gameState.c  linkedList.c  linkedList.h  move.c  piece.c  player.c  valid.c  valid.h
src/include/: ai.h  board.h  cchess.h  gameState.h  move.h  piece.h  player.h  valid.h
